--- a/src/view/public/css/global.css
+++ b/src/view/public/css/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
     margin: 0;
@@ -14,15 +14,18 @@
 body {
     background-color: var(--bkg);
     color: var(--txt);
-    font-family: "Poppins", sans-serif;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    text-rendering: optimizeLegibility;
 }
 
-container {
-    width: 200px;
+Container {
+    width: 500px;
     background-color: white;
-    border: 1px solid black;
+    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    padding: 1rem;
 }
