--- a/src/view/public/css/output.css
+++ b/src/view/public/css/output.css
@@ -544,40 +544,99 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.container {
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.flex {
+  display: flex;
+}
+
+.w-full {
   width: 100%;
 }
 
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
+.items-center {
+  align-items: center;
 }
 
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
+h1 {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 700;
 }
 
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
+p {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
+label {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
-/* 
-Tailwind style conventions are used here.
-*/
+.input {
+  border-width: 1px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.input-left {
+  margin-right: 0.5rem;
+}
+
+.input-right {
+  margin-left: 0.5rem;
+}
+
+.checkbox {
+  margin-right: 0.5rem;
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
+.btn {
+  border-width: 1px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hyperlink {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.hyperlink:hover {
+  text-decoration-line: underline;
+}
+
+.footer-text {
+  margin-top: 2rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.\*\:mt-2 > * {
+  margin-top: 0.5rem;
+}
