--- a/src/view/tailwind.css
+++ b/src/view/tailwind.css
@@ -2,6 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
-/* 
-Tailwind style conventions are used here.
-*/
+h1 {
+    @apply text-xl font-bold;
+}
+
+p {
+    @apply text-lg;
+}
+
+label {
+    @apply text-lg;
+}
+
+.input {
+    @apply py-2 px-4 bg-gray-50 border;
+}
+
+.input-left {
+    @apply mr-2;
+}
+
+.input-right {
+    @apply ml-2;
+}
+
+.checkbox {
+    @apply size-5 mr-2;
+}
+
+.btn {
+    @apply py-2 px-4 bg-blue-500 border text-white;
+}
+
+.hyperlink {
+    @apply text-blue-500 hover:underline;
+}
+
+.footer-text {
+    @apply mt-8 text-base;
+}
