--- a/src/view/public/css/global.css
+++ b/src/view/public/css/global.css
@@ -19,8 +19,9 @@ body {
     text-rendering: optimizeLegibility;
 }
 
-Container {
+.Container {
     width: 500px;
+    border-radius: 0.375rem;
     background-color: white;
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
     position: absolute;
