--- a/src/view/public/css/output.css
+++ b/src/view/public/css/output.css
@@ -587,6 +587,7 @@ label {
 }
 
 .input {
+  border-radius: 0.375rem;
   border-width: 1px;
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -611,6 +612,7 @@ label {
 }
 
 .btn {
+  border-radius: 0.375rem;
   border-width: 1px;
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
