--- a/src/view/tailwind.css
+++ b/src/view/tailwind.css
@@ -15,7 +15,7 @@ label {
 }
 
 .input {
-    @apply py-2 px-4 bg-gray-50 border;
+    @apply py-2 px-4 bg-gray-50 border rounded-md;
 }
 
 .input-left {
@@ -31,7 +31,7 @@ label {
 }
 
 .btn {
-    @apply py-2 px-4 bg-blue-500 border text-white;
+    @apply py-2 px-4 bg-blue-500 border rounded-md text-white;
 }
 
 .hyperlink {
