--- a/src/view/public/css/output.css
+++ b/src/view/public/css/output.css
@@ -544,11 +544,6 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -561,8 +556,14 @@ video {
   width: 100%;
 }
 
-.items-center {
-  align-items: center;
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .py-2 {
@@ -605,17 +606,9 @@ label {
   margin-left: 0.5rem;
 }
 
-.checkbox {
-  margin-right: 0.5rem;
-  width: 1.25rem;
-  height: 1.25rem;
-}
-
 .btn {
   border-radius: 0.375rem;
   border-width: 1px;
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-left: 1rem;
