--- a/src/view/tailwind.css
+++ b/src/view/tailwind.css
@@ -26,12 +26,8 @@ label {
     @apply ml-2;
 }
 
-.checkbox {
-    @apply size-5 mr-2;
-}
-
 .btn {
-    @apply py-2 px-4 bg-blue-500 border rounded-md text-white;
+    @apply py-2 px-4 border rounded-md text-white;
 }
 
 .hyperlink {
