--- a/public/template/header.html
+++ b/public/template/header.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../public/css/global.css">
-    <link rel="stylesheet" href="../../public/css/output.css">
+    <link rel="stylesheet" href="/php_auth/public/css/global.css">
+    <link rel="stylesheet" href="/php_auth/public/css/output.css">
     <title>php_auth</title>
 </head>
 <body>
