--- a/public/css/global.css
+++ b/public/css/global.css
@@ -30,3 +30,13 @@ body {
     transform: translate(-50%, -50%);
     padding: 1rem;
 }
+
+@media only screen and (max-width: 768px) {
+    .Container {
+        min-height: 100vh;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+}
