--- a/src/view/tailwind.css
+++ b/src/view/tailwind.css
@@ -15,7 +15,7 @@ label {
 }
 
 .input {
-    @apply py-2 px-4 bg-gray-50 border rounded-md;
+    @apply py-2 px-4 bg-gray-50 border rounded-md outline-4 outline-gray-100 outline-offset-2;
 }
 
 .input-left {
@@ -36,4 +36,8 @@ label {
 
 .footer-text {
     @apply mt-8 text-base;
+}
+
+.error {
+    @apply mt-2 text-red-700 text-base;
 }
