--- a/public/css/global.css
+++ b/public/css/global.css
@@ -40,3 +40,9 @@ body {
         justify-content: center;
     }
 }
+
+/* @media only screen and (min-width: 1024px) {
+    .Container {
+        width: 700px;
+    }
+}    */
