--- a/public/css/global.css
+++ b/public/css/global.css
@@ -31,12 +31,14 @@ body {
     padding: 1rem;
 }
 
-.footer {
+.footer { 
     position: absolute;
     bottom: 0;
     width: 100%;
     text-align: center;
     padding: 1rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
 }
 
 @media only screen and (max-width: 768px) {
